@@ -90,6 +90,19 @@ typedef struct msg_comm {
   MSG_error_t status;           /* status of the communication once finished */
 } s_msg_comm_t;
 
+typedef enum {
+  msg_vm_state_suspended, msg_vm_state_running, msg_vm_state_migrating
+} e_msg_vm_state_t;
+
+typedef struct msg_vm {
+  s_xbt_swag_hookup_t all_vms_hookup;
+  s_xbt_swag_hookup_t host_vms_hookup;
+  xbt_dynar_t processes;
+  e_msg_vm_state_t state;
+  m_host_t location;
+  int coreAmount;
+} s_msg_vm_t;
+
 /************************** Global variables ********************************/
 typedef struct MSG_Global {
   xbt_fifo_t host;
@@ -101,6 +114,7 @@ typedef struct MSG_Global {
   unsigned long int sent_msg;   /* Total amount of messages sent during the simulation */
   void (*task_copy_callback) (m_task_t task, m_process_t src, m_process_t dst);
   void_f_pvoid_t process_data_cleanup;
+  xbt_swag_t vms;
 } s_MSG_Global_t, *MSG_Global_t;
 
 /*extern MSG_Global_t msg_global;*/
